force-app/main/default/objects/BMCServiceDesk__Problem_History__c/BMCServiceDesk__Problem_History__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpProblemHistory</customHelpPage>
    <description>This object allows you to store data for problem history records.</description>
    <label>Problem History</label>
    <nameField>
        <label>Problem History ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Problem Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>