force-app/main/default/objects/BMCServiceDesk__Problem_History__c/fields/BMCServiceDesk__Description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Description__c</fullName>
    <description>This field stores the details regarding the problem history record</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>