force-app/main/default/objects/BMCServiceDesk__Problem_History__c/fields/BMCServiceDesk__EmailConversationData__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__EmailConversationData__c</fullName>
    <description>Stores email addresses (From, To, and CC) of the email message.</description>
    <label>Email Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>