force-app/main/default/objects/BMCServiceDesk__Problem_History__c/fields/BMCServiceDesk__FKProblem__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKProblem__c</fullName>
    <description>This field stores the foreign key value of the linked problem</description>
    <label>Problem</label>
    <referenceTo>BMCServiceDesk__Problem__c</referenceTo>
    <relationshipLabel>Action History</relationshipLabel>
    <relationshipName>Problem_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>