force-app/main/default/objects/BMCServiceDesk__Problem_History__c/fields/BMCServiceDesk__Formatted_Duration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Formatted_Duration__c</fullName>
    <description>This filed is used to display the hh:mm format duration on related list column</description>
    <formula>LPAD(TEXT( FLOOR((BMCServiceDesk__Duration__c / 60))),2,TEXT(0)) &amp; &quot;:&quot; &amp; LPAD(TEXT(MOD(BMCServiceDesk__Duration__c , 60)),2,TEXT(0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>