force-app/main/default/objects/BMCServiceDesk__Problem_History__c/fields/BMCServiceDesk__Reply__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Reply__c</fullName>
    <formula>IF( BMCServiceDesk__FKAction__r.BMCServiceDesk__Abbreviation__c ==&apos;EMAILIN&apos; ||  BMCServiceDesk__FKAction__r.BMCServiceDesk__Abbreviation__c ==&apos;EMAILOUT&apos;,HYPERLINK(&quot;apex/BMCServiceDesk__ConsoleRedirect?formulaFieldName=ProblemHistoryReply&amp;recordId=&quot;+ BMCServiceDesk__FKProblem__r.Id+&quot;&amp;HistoryId=&quot;+Id+&quot;&amp;actionType=&quot;+BMCServiceDesk__FKAction__r.Name,IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/b_reply_to_client_email.png&quot;, &quot;Reply&quot;),&apos;_self&apos;),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reply</label>
    <type>Text</type>
</CustomField>