force-app/main/default/objects/BMCServiceDesk__Problem_History__c/fields/BMCServiceDesk__System__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field stores the value if the problem history is syste or user record</description>
    <label>System</label>
    <type>Checkbox</type>
</CustomField>